# contact_with_nitsche

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_DOCUMENTATION.md  Doxyfile  Makefile  README.md  clean_all.cmake  data.pot  fractured.geo  fractured.msh  fractured_mesh.geo  fractured_mesh.msh  main.cpp  make.dep  result.vtk  test.cpp
000/: BC.cpp  BC.hpp  Domain.cpp  Domain.hpp  DomainView.cpp  DomainView.hpp
examples/augLM_hexa/: data.pot
examples/augLM_tetra/: data.pot
examples/nitsche_hexa/: data.pot
examples/nitsche_tetra/: data.pot
examples/penalty_hexa/: data.pot
examples/penalty_tetra/: data.pot
examples/user/: data.pot  fractured_mesh.geo  fractured_mesh.msh
include/: BC.hpp  BCHandler.hpp  ContactEnforcementStrategy.hpp  ContactProblem.hpp  Core.hpp  FEMManager.hpp  KKTbrick.hpp  Mesh.hpp  MeshBuilder.hpp  MeshRegion.hpp  Params.hpp  Utils.hpp  muParserXInterface.hpp
result/: nice_result.pvsm
src/: BC.cpp  BCHandler.cpp  ContactEnforcementStrategy.cpp  ContactProblem.cpp  FEMManager.cpp  KKTbrick.cpp  Mesh.cpp  MeshBuilder.cpp  MeshRegion.cpp  Params.cpp  Utils.cpp
